--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tanstack/react-table": "^8.20.5",
     "@tremor/react": "^3.18.2",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^4.4.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.5",
@@ -29,10 +30,12 @@
     "next": "14.2.13",
     "next-auth": "^5.0.0-beta.21",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
+    "react-intersection-observer": "^9.13.1",
     "react-toastify": "^10.0.5",
     "recharts": "^2.12.7",
     "swr": "^2.2.5",
