--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "chart.js": "^4.4.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "filestack-js": "^3.34.3",
     "framer-motion": "^11.11.5",
     "lucide-react": "^0.445.0",
     "mongoose": "^8.7.0",
